--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,5 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="gap_12sp">12sp</dimen>
+    <dimen name="gap_20sp">20sp</dimen>
+    <dimen name="gap_24sp">24sp</dimen>
+    <dimen name="gap_28sp">28sp</dimen>
+    <dimen name="gap_36sp">36sp</dimen>
+    <dimen name="gap_48sp">48sp</dimen>
+
     <dimen name="gap_0dp">0dp</dimen>
+    <dimen name="gap_2dp">2dp</dimen>
+    <dimen name="gap_4dp">4dp</dimen>
+    <dimen name="gap_8dp">8dp</dimen>
     <dimen name="gap_16dp">16dp</dimen>
+    <dimen name="gap_32dp">32dp</dimen>
+    <dimen name="gap_64dp">64dp</dimen>
+    <dimen name="gap_128dp">128dp</dimen>
 </resources>
