--- a/app/src/main/res/layout/fragment_preview.xml
+++ b/app/src/main/res/layout/fragment_preview.xml
@@ -36,6 +36,46 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/preview_toolbar" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/saveStateFrame"
+        android:layout_width="@dimen/gap_0dp"
+        android:layout_height="@dimen/gap_0dp"
+        app:layout_constraintTop_toTopOf="@id/realtime_preview"
+        app:layout_constraintBottom_toBottomOf="@id/realtime_preview"
+        app:layout_constraintStart_toStartOf="@id/realtime_preview"
+        app:layout_constraintEnd_toEndOf="@id/realtime_preview"
+        android:visibility="gone">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/black" />
+
+        <TextView
+            android:id="@+id/tvSaveState"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/nunito_sans_bold"
+            android:textColor="@color/white"
+            android:textSize="@dimen/gap_36sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.4"
+            tools:text="Saving" />
+
+        <ProgressBar
+            android:layout_width="@dimen/gap_64dp"
+            android:layout_height="@dimen/gap_64dp"
+            android:indeterminateTint="@color/rr_red"
+            android:layout_marginTop="@dimen/gap_16dp"
+            app:layout_constraintEnd_toEndOf="@+id/tvSaveState"
+            app:layout_constraintStart_toStartOf="@+id/tvSaveState"
+            app:layout_constraintTop_toBottomOf="@+id/tvSaveState" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
