--- a/app/src/main/res/drawable/toggle_btn_selector.xml
+++ b/app/src/main/res/drawable/toggle_btn_selector.xml
@@ -1,8 +1,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_checked="false"
+        android:color="@color/white"
         android:drawable="@drawable/bg_toggle_off" />
     <item
         android:state_checked="true"
+        android:color="@color/rr_gray_dark"
         android:drawable="@drawable/bg_toggle_on" />
 </selector>
